src/test/resources/invalid/semanticErr/extra/otheredges/lhsNullAssign.wacc
begin

fst null = 5

end